style.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  margin: 0;
  padding: 0;
  background: #292a2b;
}

/* =================================================================== */

#awcSectionBuilderCards,
#awcSectionBuilderCards * {
  text-decoration: none;
}

#awcSectionBuilderCards {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  gap: 25px;
  max-width: 1500px;
  margin: 0 auto;
}

#awcSectionBuilderCards .awcBuilderCard {
  position: relative;
  display: grid;
  grid-template-rows: 80% 20%; /* Top section is 80%, bottom section is 20% */
  width: 350px;
  height: 260px;
  overflow: hidden;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}

#awcSectionBuilderCards .awcBgImg {
  grid-row: 1 / 3; /* Spans the entire card */
  width: 100%;
  height: 100%;
  object-fit: cover;
  position: absolute;
  z-index: 1;
}

#awcSectionBuilderCards .awcOverlay {
  grid-row: 1 / 3;
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: rgba(255, 255, 255, 0.65);
  z-index: 2;
  transition: all 0.3s ease;
}

#awcSectionBuilderCards .awcBuilderCard:hover .awcOverlay {
  background-color: rgba(0, 0, 0, 0.65);
}

#awcSectionBuilderCards .awcContain {
  grid-row: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  padding: 16px;
  position: relative;
  z-index: 3;
  height: 80%; /* Occupies the top 80% of the card */
  color: #000;
  margin-top: 18px;
}

#awcSectionBuilderCards .awcBuilderCard:hover .awcContain {
  transform: translateY(50px); /* Move content (logo and text) down */
  transition: transform 0.3s ease; /* Smooth animation */
}

#awcSectionBuilderCards .awcBtn {
  grid-row: 2; /* Place button in the second row of the grid */
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: rgba(245, 131, 62, 1);
  color: #faf8c2;
  font-size: 22px;
  text-transform: uppercase;
  width: 100%;
  height: 100%; /* Ensures it spans the entire row height */
  z-index: 3;
  transition: background-color 0.3s ease;
  position: relative;
}

#awcSectionBuilderCards .awcBuilderCard:hover .awcBtn {
  color: #fff;
  background-color: rgba(245, 131, 62, 0);
  transform: translateY(-155px); /* Move button up above the logo */
  opacity: 1; /* Ensure it's fully visible */
  transition: transform 0.4s ease, opacity 0.3s ease; /* Smooth transition */
}

#awcSectionBuilderCards .awcGxBrand {
  margin: 0 auto 8px;
}

#awcSectionBuilderCards .awcGxBrand.awcDark {
  display: block;
}

#awcSectionBuilderCards .awcBuilderCard:hover .awcGxBrand.awcDark {
  display: none;
}

#awcSectionBuilderCards .awcGxBrand.awcLight {
  display: none;
}

#awcSectionBuilderCards .awcBuilderCard:hover .awcGxBrand.awcLight {
  display: block;
}

#awcSectionBuilderCards h3 {
  font-size: 22px;
  text-align: center;
  line-height: 1.2;
  margin: 0 0 2px;
}

#awcSectionBuilderCards .awcBuilderCard:hover h3 {
  display: none;
}

#awcSectionBuilderCards h4 {
  font-size: 19px;
  text-align: center;
  line-height: 1.2;
  margin: 0 0 4px;
}

#awcSectionBuilderCards .awcBuilderCard:hover h4 {
  display: none;
}

#awcSectionBuilderCards h5 {
  font-size: 16px;
  text-align: center;
  line-height: 1.2;
  margin: 0;
}

#awcSectionBuilderCards .awcBuilderCard:hover h5 {
  display: none;
}

#awcSectionBuilderCards .awcGxArrowYellow {
  display: block;
  height: 24px;
  width: auto;
  margin-left: 12px;
}

#awcSectionBuilderCards .awcBuilderCard:hover .awcGxArrowYellow {
  display: none;
}

#awcSectionBuilderCards .awcGxArrowWhite {
  display: block; /* Ensure it always renders */
  position: absolute; /* Position relative to .awcBuilderCard */
  right: 20px; /* Place near the right edge */
  top: 50%; /* Vertically centered */
  transform: translateX(40px) translateY(-50%); /* Start off-screen to the right */
  height: 30px;
  width: auto;
  opacity: 0; /* Initially hidden */
  transition: opacity 0.4s ease, transform 0.4s ease; /* Smooth fade and movement */
  z-index: 4; /* Ensure it's above other elements */
}

#awcSectionBuilderCards .awcBuilderCard:hover .awcGxArrowWhite {
  opacity: 1; /* Fade it in */
  transform: translateX(0) translateY(-50%); /* Slide into view */
}

/*
 * Typography
 */

.face_montserrat-thin {
  font-family: montserrat, sans-serif;
  font-weight: 100;
  font-style: normal;
}

.face_montserrat-extralight {
  font-family: montserrat, sans-serif;
  font-weight: 200;
  font-style: normal;
}

.face_montserrat-light {
  font-family: montserrat, sans-serif;
  font-weight: 300;
  font-style: normal;
}

.face_montserrat-light-italic {
  font-family: montserrat, sans-serif;
  font-weight: 300;
  font-style: italic;
}

.face_montserrat {
  font-family: "montserrat", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.face_montserrat-italic {
  font-family: "montserrat", sans-serif;
  font-weight: 400;
  font-style: italic;
}

.face_montserrat-medium {
  font-family: "montserrat", sans-serif;
  font-weight: 500;
  font-style: normal;
}

.face_montserrat-semibold {
  font-family: "montserrat", sans-serif;
  font-weight: 600;
  font-style: normal;
}

.face_montserrat-bold {
  font-family: "montserrat", sans-serif;
  font-weight: 700;
  font-style: normal;
}

.face_montserrat-bold-italic {
  font-family: "montserrat", sans-serif;
  font-weight: 700;
  font-style: italic;
}

.face_montserrat-alt {
  font-family: "montserrat-alternates", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.face_montserrat-alt-italic {
  font-family: "montserrat-alternates", sans-serif;
  font-weight: 400;
  font-style: italic;
}

.face_montserrat-alt-bold {
  font-family: "montserrat-alternates", sans-serif;
  font-weight: 700;
  font-style: normal;
}

.face_montserrat-alt-bold-italic {
  font-family: "montserrat-alternates", sans-serif;
  font-weight: 700;
  font-style: italic;
}

.face_ivyora {
  font-family: ivyora-display, sans-serif;
  font-weight: 400;
  font-style: normal;
}

.face_ivyora-italic {
  font-family: ivyora-display, sans-serif;
  font-weight: 400;
  font-style: italic;
}

.face_ivyora-thin {
  font-family: ivyora-display, sans-serif;
  font-weight: 100;
  font-style: normal;
}

.face_ivyora-thin-italic {
  font-family: ivyora-display, sans-serif;
  font-weight: 100;
  font-style: italic;
}

.face_ivyora-medium {
  font-family: ivyora-display, sans-serif;
  font-weight: 500;
  font-style: normal;
}

.face_ivyora-bold {
  font-family: ivyora-display, sans-serif;
  font-weight: 700;
  font-style: normal;
}

/*
 * Color
 */

.text-vh-brand-med,
.text-vh-orange {
  color: #f5833e;
}

.bg-vh-brand-med,
.bg-vh-orange {
  background-color: #f5833e;
}

.text-vh-brand-dark,
.text-vh-evergreen {
  color: #163934;
}

.bg-vh-brand-dark,
.bg-vh-brand-evergreen {
  background-color: #163934;
}

.text-vh-brand-light-cool,
.text-vh-mint-cream {
  color: #e6f0eb;
}

.bg-vh-brand-light-cool,
.bg-vh-brand-mint-cream {
  background-color: #e6f0eb;
}

.text-vh-brand-light-warm,
.text-vh-pastel-yellow {
  color: #faf8c2;
}

.bg-vh-brand-light-warm,
.bg-vh-brand-pastel-yellow {
  background-color: #faf8c2;
}

.text-white {
  color: #fff;
}

/*
 * Utils
 */
.text-center {
  text-align: center;
}

